[tool.poetry]
name = "repl_python3_TripAdvisorScraper"
version = "0.1.0"
description = ""
authors = ["caught_offside <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
